[package]
name = "weather_spider"
version = "0.1.0"
authors = ["keithyin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.0"
serde_json = "1.0.62"
